--- a/estate_nursery/views/sequence_view.xml
+++ b/estate_nursery/views/sequence_view.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
+        <!-- Sequences for separation code -->
+        <record id="spr_code_sequence" model="ir.sequence.type">
+            <field name="name">Seed Separation </field>
+            <field name="code">estate.nursery.separation</field>
+        </record>
+
+        <record id="seq_separation_seed" model="ir.sequence">
+            <field name="name">Seed Separation</field>
+            <field name="code">estate.nursery.separation</field>
+            <field name="prefix">SEP</field>
+            <field name="padding">3</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
+        <!-- Sequences for planting code -->
+        <record id="plt_code_sequence" model="ir.sequence.type">
+            <field name="name">Planting</field>
+            <field name="code">estate.nursery.planting</field>
+        </record>
+
+        <record id="seq_planting" model="ir.sequence">
+            <field name="name">culling Request</field>
+            <field name="code">estate.nursery.planting</field>
+           <field name="prefix">PLT</field>
+            <field name="padding">3</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
         <!-- Sequences for request code -->
         <record id="rsq_code_sequence" model="ir.sequence.type">
             <field name="name">Seed Request </field>
