--- a/estate_nursery/views/sequence_view.xml
+++ b/estate_nursery/views/sequence_view.xml
@@ -4,12 +4,12 @@
         <!-- Sequences for separation code -->
         <record id="spr_code_sequence" model="ir.sequence.type">
             <field name="name">Seed Separation </field>
-            <field name="code">estate.nursery.separation</field>
+            <field name="code">estate.nursery.cleavage</field>
         </record>
 
         <record id="seq_separation_seed" model="ir.sequence">
             <field name="name">Seed Separation</field>
-            <field name="code">estate.nursery.separation</field>
+            <field name="code">estate.nursery.cleavage</field>
             <field name="prefix">SEP</field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
