--- a/estate_nursery/views/sequence_view_planting.xml
+++ b/estate_nursery/views/sequence_view_planting.xml
@@ -3,14 +3,14 @@
     <data>
         <!-- Sequences for planting code -->
         <record id="plt_code_sequence" model="ir.sequence.type">
-            <field name="name">Planting</field>
-            <field name="code">estate.nursery.planting</field>
+            <field name="name">Seed Delivery Order</field>
+            <field name="code">estate.nursery.seeddo</field>
         </record>
 
         <record id="seq_planting" model="ir.sequence">
-            <field name="name">Plantin Request</field>
-            <field name="code">estate.nursery.planting</field>
-           <field name="prefix">PLT</field>
+            <field name="name">Seed Delivery Order</field>
+            <field name="code">estate.nursery.seeddo</field>
+           <field name="prefix">SDO</field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
         </record>
