--- a/estate_nursery/views/sequence_view.xml
+++ b/estate_nursery/views/sequence_view.xml
@@ -15,6 +15,21 @@
             <field name="company_id" eval="False"/>
         </record>
 
+        <!-- Sequences for Recovery code -->
+        <record id="recov_code_sequence" model="ir.sequence.type">
+            <field name="name">Seed Recovery</field>
+            <field name="code">estate.nursery.recovery</field>
+        </record>
+
+        <record id="recovery_cleaving_seed" model="ir.sequence">
+            <field name="name">Seed Recovery</field>
+            <field name="code">estate.nursery.recovery</field>
+            <field name="prefix">REC</field>
+            <field name="padding">3</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
+
         <!-- Sequences for culling code -->
         <record id="cll_code_sequence" model="ir.sequence.type">
             <field name="name">culling Request </field>
