--- a/estate_nursery/views/sequence_view_planting.xml
+++ b/estate_nursery/views/sequence_view_planting.xml
@@ -15,6 +15,20 @@
             <field name="company_id" eval="False"/>
         </record>
 
+         <!-- Sequences for Transfer to Mn code -->
+        <record id="trfmn_code_sequence" model="ir.sequence.type">
+            <field name="name">Nursery Transfer To Mn</field>
+            <field name="code">estate.nursery.transfermn</field>
+        </record>
+
+        <record id="seq_transfermn" model="ir.sequence">
+            <field name="name">Nursery Transfer To Mn</field>
+            <field name="code">estate.nursery.transfermn</field>
+           <field name="prefix">TRFMN</field>
+            <field name="padding">3</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
         <!-- Sequences for request code -->
         <record id="rsq_code_sequence" model="ir.sequence.type">
             <field name="name">Seed Request </field>
