--- a/purchase_indonesia/views/procur_request_sequence.xml
+++ b/purchase_indonesia/views/procur_request_sequence.xml
@@ -18,5 +18,13 @@
             <field name="company_id" eval="False"/>
         </record>
 
+        <record id="seq_quotation_comparison" model="ir.sequence">
+            <field name="name">Sequence Quotation Comparison </field>
+            <field name="code">quotation.comparison.form</field>
+            <!--<field name="prefix">GR</field>-->
+            <field name="padding">3</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
     </data>
 </openerp>
