--- a/purchase_indonesia/views/procur_request_sequence.xml
+++ b/purchase_indonesia/views/procur_request_sequence.xml
@@ -34,5 +34,21 @@
             <field name="company_id" eval="False"/>
         </record>
 
+        <record id="seq_quotation_po_no" model="ir.sequence">
+            <field name="name">Sequence Purchase Order</field>
+            <field name="code">purchase.po_no</field>
+            <!--<field name="prefix">GR</field>-->
+            <field name="padding">3</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
+        <record id="seq_quotation_grn" model="ir.sequence">
+            <field name="name">Sequence Goods Receipt Note</field>
+            <field name="code">stock.grn</field>
+            <!--<field name="prefix">GR</field>-->
+            <field name="padding">3</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
     </data>
 </openerp>
