--- a/purchase_indonesia/views/procur_request_sequence.xml
+++ b/purchase_indonesia/views/procur_request_sequence.xml
@@ -50,5 +50,49 @@
             <field name="company_id" eval="False"/>
         </record>
 
+
+        <record id="seq_purchase_request_ho_hja" model="ir.sequence">
+            <field name="name">Purchase Request</field>
+            <field name="code">purchase.request.seq.ho.hja</field>
+            <field name="prefix"> </field>
+            <field name="padding">3</field>
+        </record>
+
+        <record id="seq_purchase_request_ho_apk" model="ir.sequence">
+            <field name="name">Purchase Request</field>
+            <field name="code">purchase.request.seq.ho.apk</field>
+            <field name="prefix"> </field>
+            <field name="padding">3</field>
+        </record>
+
+        <record id="seq_purchase_request_ho_tpn" model="ir.sequence">
+            <field name="name">Purchase Request</field>
+            <field name="code">purchase.request.seq.ho.tpn</field>
+            <field name="prefix"> </field>
+            <field name="padding">3</field>
+        </record>
+
+        <record id="seq_purchase_request_ro_hja" model="ir.sequence">
+            <field name="name">Purchase Request</field>
+            <field name="code">purchase.request.seq.ro.hja</field>
+            <field name="prefix"> </field>
+            <field name="padding">3</field>
+        </record>
+
+        <record id="seq_purchase_request_ro_apk" model="ir.sequence">
+            <field name="name">Purchase Request</field>
+            <field name="code">purchase.request.seq.ro.apk</field>
+            <field name="prefix"> </field>
+            <field name="padding">3</field>
+        </record>
+
+        <record id="seq_purchase_request_ro_tpn" model="ir.sequence">
+            <field name="name">Purchase Request</field>
+            <field name="code">purchase.request.seq.ro.tpn</field>
+            <field name="prefix"> </field>
+            <field name="padding">3</field>
+        </record>
+
+
     </data>
 </openerp>
