--- a/purchase_indonesia/views/procur_request_sequence.xml
+++ b/purchase_indonesia/views/procur_request_sequence.xml
@@ -79,7 +79,7 @@
         <!--Sequence Purchase Order-->
         <record id="seq_quotation_po_no_kpst_hja" model="ir.sequence">
             <field name="name">Sequence Purchase Order HO HJA</field>
-            <field name="code">purchase.po_no.kpst.hja</field>
+            <field name="code">purchase.order.kpst.hja</field>
             <field name="prefix"> </field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
@@ -87,7 +87,7 @@
 
         <record id="seq_quotation_po_no_kpst_apk" model="ir.sequence">
             <field name="name">Sequence Purchase Order HO APK</field>
-            <field name="code">purchase.po_no.kpst.apk</field>
+            <field name="code">purchase.order.kpst.apk</field>
             <field name="prefix"> </field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
@@ -95,7 +95,7 @@
 
         <record id="seq_quotation_po_no_kpst_tpn" model="ir.sequence">
             <field name="name">Sequence Purchase Order HO TPN</field>
-            <field name="code">purchase.po_no.kpst.tpn</field>
+            <field name="code">purchase.order.kpst.tpn</field>
             <field name="prefix"> </field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
@@ -103,7 +103,7 @@
 
         <record id="seq_quotation_po_no_kokb_hja" model="ir.sequence">
             <field name="name">Sequence Purchase Order RO HJA</field>
-            <field name="code">purchase.po_no.kokb.hja</field>
+            <field name="code">purchase.order.kokb.hja</field>
             <field name="prefix"> </field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
@@ -111,7 +111,7 @@
 
         <record id="seq_quotation_po_no_kokb_apk" model="ir.sequence">
             <field name="name">Sequence Purchase Order RO APK</field>
-            <field name="code">purchase.po_no.kokb.apk</field>
+            <field name="code">purchase.order.kokb.apk</field>
             <field name="prefix"> </field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
@@ -119,7 +119,7 @@
 
         <record id="seq_quotation_po_no_kokb_tpn" model="ir.sequence">
             <field name="name">Sequence Purchase Order RO APK</field>
-            <field name="code">purchase.po_no.kokb.tpn</field>
+            <field name="code">purchase.order.kokb.tpn</field>
             <field name="prefix"> </field>
             <field name="padding">3</field>
             <field name="company_id" eval="False"/>
